@@ -1,3 +1,5 @@
+2019_09_04 : Loader blue counter
+
 2019_09_02 ; Simple poc rainbox text animation
 
 2019_06_07 ; Added simple POC verticaly aligned
